# models-openai-aryeh-fun

./: Cargo.toml  README  README.md  flake.nix
src/: main.rs
