[package]
name = "models-openai-aryeh-fun"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.23.3"
chrono = "0.4.38"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = "1.38.0"
serde_json = "1.0.120"
maud = { version = "0.26.0" , features = ["rocket"]}
table = "0.4.0"
tabled = { version = "0.15.0" }
table_to_html = "0.4.0"
json_to_table = "0.7.0"
